--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -18,7 +18,8 @@
     <script type="module">
         import { getAuth, signOut } from 'https://www.gstatic.com/firebasejs/9.8.1/firebase-auth.js';
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js';
-        import { firebaseConfig } from '../src/firebase/firebaseConfig.js'; // Adjust the path if needed
+        import { firebaseConfig } from './scripts/firebaseConfig.js';
+
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
